fix(style): white-space wrapping in enrolment form and event details
PT-1840

--- a/src/domain/enrolment/enrolmentForm/enrolmentForm.module.scss
+++ b/src/domain/enrolment/enrolmentForm/enrolmentForm.module.scss
@@ -2,7 +2,8 @@
 
 .enrolmentForm {
   padding: var(--spacing-layout-s) var(--spacing-layout-xs);
-
+  white-space: normal;
+  
   .rowWith2Columns {
     display: grid;
 
